Build and run SonarScanner with Java 17 (#239)